--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "dotenv": "^16.5.0"
-
+    "swagger-ui-dist": "^5.26.2",
+    "swagger-ui-express": "^5.0.1"
   }
 }
